--- a/sergiy/index.html
+++ b/sergiy/index.html
@@ -80,7 +80,8 @@
 	            <div class="logos">
 	               <div class="diya">
 					  <!-- #ФИО #toedit -->
-<div class="pathtitle menutitile">Вітаємо, Дія</div>	                  <!---->
+	                  <div class="pathtitle menutitile">Вітаємо, Сергій</div>
+	                  <!---->
 	               </div>
 	               <div class="scanqr"></div>
 	            </div>
@@ -303,9 +304,11 @@
 	                        <div class="info">
 	                           <div class="opis">
 	                           	  <!-- #дата #toedit-->
-<div class="date">Дата народження: 18.02.2000</div>	                              <!---->
+	                              <div class="date">Дата народження: 24.09.2002</div>
+	                              <!---->
 	                              <!-- #номерпаспорта #toedit -->
-<div class="number">Номер: 2913802</div>	                              <!---->
+	                              <div class="number">Номер: 005209716</div>
+	                              <!---->
 				      			  <!-- #подпись -->
 	                              <div style="background-image: url(sign.png);" class="sign"></div>
 				                  <!---->
@@ -314,7 +317,8 @@
 	                     </div>
 	                     <div class="razdel"></div>
 	                     <!-- #ФИО #toedit -->
-<div class="name">Тест Дія Мейкер</div>	                     <!---->
+	                     <div class="name">Процанін Сергій Андрійович</div>
+	                     <!---->
 	                     <div class="more"></div>
 	                  </div>
 	                  <div class="content back">
@@ -344,12 +348,15 @@
 	                        <div class="deskr">PHOKПП</div>
 	                     </div>
 	                     <!-- #ФИО #toedit -->
-<div class="name">Тест Дія Мейкер</div>	                     <!---->
+	                     <div class="name">Процанін Сергій Андрійович</div>
+	                     <!---->
 	                     <!-- #дата #toedit -->
-<div class="date">Дата народження: 18.02.2000</div>	                     <!---->
+	                     <div class="date">Дата народження: 24.09.2002</div>
+	                     <!---->
 	                     <div class="line marquee">РНОКПП дійсний. Перевірено Державною податковою службою.</div>
 	                     <!-- #ИНН #ІПН #toedit -->
-<div class="number">13843022</div>	                     <!---->
+	                     <div class="number">9874620912</div>
+	                     <!---->
 	                  </div>
 	                  <div class="content back">
 	                     <div class="loaded" style="opacity:0">
